dashboard styling for artist only, buble menu line fix, search field comes center with blurred background

--- a/app/assets/stylesheets/components/_melo_menu.scss
+++ b/app/assets/stylesheets/components/_melo_menu.scss
@@ -14,7 +14,7 @@
   box-shadow: 0px 0px 3px 2px rgba($color: #000000, $alpha: 0.1);
   transition: all .5s ease-in-out;
   &.show {
-    transform: translateY(4rem);
+    transform: translateY(0);
     .links {
       opacity: 1;
     }
@@ -27,9 +27,10 @@
     overflow: hidden;
     left: 0px;
     top: 0px;
+    // transform: translateY(-4rem);
     div {
       height: 150%;
-      border-left: 2px solid #E3D4C3;
+      border-left: 1px solid #E3D4C3;
       position: absolute;
       transform-origin: bottom;
       left: 50%;
@@ -176,10 +177,14 @@
     align-items: center;
     // justify-content: center !important;
     opacity: 0;
-    transform: translateY(-4.5rem);
+    height: fit-content;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     transition: all .5s ease-in-out;
 
-    div {
+    div { // menu buttons
       display: flex;
       position: relative;
       flex-direction: row;
