--- a/app/assets/stylesheets/components/_melo_navbar.scss
+++ b/app/assets/stylesheets/components/_melo_navbar.scss
@@ -1,12 +1,13 @@
 #melo-nav {
   position: fixed;
   z-index: 10;
-  background-color: $tan;
+  width: 100%;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 4rem;
-  border-bottom: 1px solid rgba($color: $gray, $alpha: 0.7);
+  // background-color: $tan;
+  //   width: 100%;
+  // height: 4rem;
+  // border-bottom: 4px solid rgba($color: $gray, $alpha: 1);
   // &::after {
   //   content: '';
   //   width: 100%;
@@ -20,10 +21,14 @@
 
 
   .bar  {
-    display: flex;
     width: 100%;
+    height: 4rem;
+    background-color: $tan;
+    border-bottom: 4px solid rgba($color: $gray, $alpha: 1);
+    display: flex;
     padding: 0px 15px;
     flex-direction: row;
+    margin-bottom: 10px;
     position: relative;
     justify-content: space-between;
     align-items: center;
@@ -41,37 +46,58 @@
     }
   }
 
-  .show-search-bar{
-    height: 30px;
-    width: 100%;
-    transition:ease;
-    position: relative;
-    top: -7px;
-    background-color: $tan;
+  .search-cont {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: rgba($color: $gray, $alpha: 0.2);
+    backdrop-filter: blur(10px);
+    transform: translateX(-100%);
+    transition: transform .3s ease;
+    &.show {
+      transform: translateX(0);
+    }
   }
 
-  #search-input{
-    background-color: $tan;
-    color: $gray;
-    border:none;
-    border-bottom: 1px solid $gray;
-    font-size: 18px;
-    &:focus {
-      box-shadow: none;
+  .search-bar{
+    height: 30px;
+    width: 90%;
+    margin: 0 auto;
+    transition:ease;
+    top: -7px;
+    background-color: $gray;
+
+    #search-input{
+      background-color: $gray;
+      width: 60%;
+      color: $white;
+      border:none;
+      border-bottom: 1px solid $white;
+      font-size: 18px;
+      &:focus {
+        box-shadow: none;
+        border: none;
+        outline: none;
+      }
+    }
+
+    #search-btn{
+      color: $gray;
+      background-color: $white;
+      width: 40%;
       border: none;
-      outline: none;
+      border-radius: none;
+      border-bottom: 1px solid $gray;
     }
   }
 
 
-  #search-btn{
-    color: $gray;
-    background-color: $tan;
-    width: 50%;
-    border: none;
-    border-radius: none;
-    border-bottom: 1px solid $gray;
-  }
+
 
   .nav-bar-left-side{
     display: flex;
@@ -85,7 +111,6 @@
     padding: 0px 0px;
     margin-top: 20px;
     margin-right: 28px;
-    opacity: 0.6,
   }
 
 }
